A buggy implementation of structures + optimizations