@@ -1,8 +1,7 @@
 package omnivoxel.server.client.structure;
 
-import core.biomes.TundraBiome;
+import core.biomes.PlainsBiome;
 import omnivoxel.client.game.settings.ConstantGameSettings;
-import omnivoxel.server.Position3D;
 import omnivoxel.server.client.chunk.biomeService.biome.Biome;
 import omnivoxel.server.client.chunk.biomeService.climate.ClimateVector;
 
@@ -21,10 +20,14 @@ public class StructureService {
     }
 
     public StructureSeed getStructure(Biome biome, int x, int y, int z, ClimateVector climateVector2D, ClimateVector climateVector3D) {
-        if (biome instanceof TundraBiome && x % ConstantGameSettings.CHUNK_WIDTH == 0 && z % ConstantGameSettings.CHUNK_LENGTH == 0 && (climateVector3D.get(0) >= y && climateVector3D.get(0) < y + 10)) {
-            return new StructureSeed(structures.getFirst(), new Position3D(0, (int) (climateVector3D.get(0) - y), 0));
-        } else {
-            return null;
+//        if (biome instanceof TundraBiome && x % ConstantGameSettings.CHUNK_WIDTH == 0 && z % ConstantGameSettings.CHUNK_LENGTH == 0 && (climateVector3D.get(0) >= y && climateVector3D.get(0) < y + 10)) {
+//            return new StructureSeed(structures.getFirst(), new Position3D(0, (int) (climateVector3D.get(0) - y), 0));
+//        } else {
+//            return null;
+//        }
+        if (biome instanceof PlainsBiome && x % ConstantGameSettings.CHUNK_WIDTH == 16 && z % ConstantGameSettings.CHUNK_LENGTH == 16) {
+            return new StructureSeed(structures.getFirst(), null);
         }
+        return null;
     }
 }
